@@ -236,3 +236,4 @@ Revision	Version Updated		Log Message
 215		C++			Build_and_test.bat
 216		C++			DasGuntLord01's recommended changes.
 217		C++			Improve fairness of many-to-one owner and core allocations.
+218		C++			Simplify capital conversion algorithm.
